[project]
name = "chaos-mesh-mcp"
version = "0.2.0"
description = "Model Context Protocol (MCP) server for Chaos Mesh chaos engineering operations"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "chaos-agents contributors"}
]
keywords = [
    "chaos-engineering",
    "chaos-mesh",
    "kubernetes",
    "mcp",
    "model-context-protocol",
    "fault-injection",
    "resilience-testing"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Distributed Computing",
]
dependencies = [
    "mcp>=0.9.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/ernestolee13/chaos-mesh-mcp"
Repository = "https://github.com/ernestolee13/chaos-mesh-mcp"
Issues = "https://github.com/ernestolee13/chaos-mesh-mcp/issues"
Documentation = "https://github.com/ernestolee13/chaos-mesh-mcp#readme"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
